# Packaide

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build.yml
