[project]
name = "packaide"
version = "2.0.0"
description = "Fast and robust 2D nesting"
readme = "README.md"
license = { text = "GPL" }
requires-python = ">=3.12"
authors = [
    { name = "Daniel Anderson", email = "dlanders@cs.cmu.edu" },
    { name = "Adrian Sy" },
    { name = "MESH AG", email = "koh@mesh.ch" }
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "shapely>=2.0.0",
    "svgelements>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/Mesh-ch/Packaide"

[build-system]
requires = [
    "scikit-build-core>=0.10.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Minimum CMake version
cmake.minimum-version = "3.15"
# Build in verbose mode for debugging
build.verbose = true
# Directory where the Python package source is located
wheel.packages = ["python/packaide"]
# Install directory for the compiled extension
wheel.install-dir = "packaide"
# Build type
cmake.build-type = "Release"
# Ensure CMake can find source files
cmake.source-dir = "."

[tool.scikit-build.cmake.define]
# Pass build type to CMake
CMAKE_BUILD_TYPE = "Release"

# Development dependencies (testing, benchmarking)
[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pytest>=8.0.0",
]

[tool.cibuildwheel]
test-requires = ["parameterized", "shapely", "svgelements", "numpy", "scipy"]
test-command = "python {project}/test/test_packing.py"
build = ["cp312-*", "cp313-*"]


# Skip 32-bit builds and musllinux (requires different setup)
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]

# We install CGAL via Conda on Windows, but CMake doesn't know
# where to find it by default.
[tool.cibuildwheel.windows]
environment = { CMAKE_PREFIX_PATH='$CONDA/Library', PATH='$CONDA/Library/bin;$PATH' }

# Use delvewheel to get DLL depedencies in the wheel on Windows
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path='$CONDA/Library/bin'"

# Shapely on Windows is bugged for Python 3.10, so we install it manually
[[tool.cibuildwheel.overrides]]
select = "cp310-win_amd64"
before-test = "pip install https://download.lfd.uci.edu/pythonlibs/x6hvwk7i/Shapely-1.8.0-cp310-cp310-win_amd64.whl"

# Install CGAL before building wheels on Linux. This is necessary
# because the wheels are built inside a docker container, which
# does not have any libraries we have installed
# Linux: build CGAL & Boost into an isolated prefix to avoid double tags
[tool.cibuildwheel.linux]
before-all = [
    "yum install -y gmp-devel mpfr-devel wget",
    # Build Boost headers only
    "wget -q https://archives.boost.io/release/1.84.0/source/boost_1_84_0.tar.gz",
    "tar -xzf boost_1_84_0.tar.gz",
    "mkdir -p /project/deps/include",
    "cp -r boost_1_84_0/boost /project/deps/include/",
    # Build CGAL into isolated prefix
    "git clone --depth 1 --branch v5.6.1 https://github.com/CGAL/cgal.git",
    "cd cgal && mkdir build && cd build",
    "cmake -DCMAKE_INSTALL_PREFIX=/project/deps -DCMAKE_BUILD_TYPE=Release -DCGAL_HEADER_ONLY=ON ..",
    "cmake --build . --target install"
]

# Global environment (applies to Linux)
[tool.cibuildwheel.environment]
CMAKE_PREFIX_PATH = "/project/deps"

